[gd_scene load_steps=3 format=3 uid="uid://crvbjsxywillq"]

[ext_resource type="Script" uid="uid://dtjdprxq6i2wx" path="res://scripts/game_ui.gd" id="1_yubou"]
[ext_resource type="FontFile" uid="uid://r22gvccm5vx1" path="res://assets/ui/font/CyberpunkCraftpixPixel.otf" id="2_rns2u"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_yubou")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -100.0
offset_right = -50.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="InactiveWeapons" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.67678, 0.108749, 3.85046e-07, 1)
theme_override_fonts/font = ExtResource("2_rns2u")
theme_override_font_sizes/font_size = 22
text = "[ Armas Desactivadas ]"

[node name="LabelTimer" type="Timer" parent="HBoxContainer/InactiveWeapons"]
autostart = true

[node name="BlackLine" type="ColorRect" parent="."]
anchors_preset = -1
anchor_top = 0.945
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0524758, 0.0379128, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_top = 0.9375
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 0.92549, 0.6, 1)
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="lifes" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rns2u")
theme_override_font_sizes/font_size = 50

[node name="level" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rns2u")
theme_override_font_sizes/font_size = 50

[node name="objective" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rns2u")
theme_override_font_sizes/font_size = 50

[connection signal="timeout" from="HBoxContainer/InactiveWeapons/LabelTimer" to="." method="_on_label_timer_timeout"]
